Refactoring tasks into separate files + shared code into trait package/class. Test clean-up.

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ gradlePlugin {
     plugins {
         PlantUMLPlugin {
             id = project.ext.pluginId
-            implementationClass = 'io.kristiansen.gradle.PlantUMLPlugin'
+            implementationClass = 'io.kristiansen.gradle.plantuml.PlantUMLPlugin'
         }
     }
 }
